--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,9 +51,9 @@ roblox_install = "0.3.0"
 secrecy = "0.8.0"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-structopt = { version = "0.3", default-features = false }
 thiserror = "1.0.13"
 toml = "0.5.3"
 tokio = "1.20.1"
 walkdir = "2.2.9"
 async-trait = "0.1.77"
+clap = { version = "4.5.0", features = ["derive", "env"] }
